crates/ty_python_semantic/resources/mdtest/snapshots/invalid.md_-_Tests_for_invalid_ty…_-_Diagnostics_for_comm…_-_Dict-literal_or_set-…_(15737b0beb194b0e).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid.md - Tests for invalid types in type expressions - Diagnostics for common errors - Dict-literal or set-literal when you meant to use `dict[]`/`set[]`
mdtest path: crates/ty_python_semantic/resources/mdtest/annotations/invalid.md
---

# Python source files

## mdtest_snippet.py

```
1 | def _(
2 |     x: {int: str},  # error: [invalid-type-form]
3 |     y: {str},  # error: [invalid-type-form]
4 | ): ...
```

# Diagnostics

```
error[invalid-type-form]: Dict literals are not allowed in parameter annotations
 --> src/mdtest_snippet.py:2:8
  |
2 |     x: {int: str},  # error: [invalid-type-form]
  |        ^^^^^^^^^^ Did you mean `dict[int, str]`?
  |
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions

```

```
error[invalid-type-form]: Set literals are not allowed in parameter annotations
 --> src/mdtest_snippet.py:3:8
  |
3 |     y: {str},  # error: [invalid-type-form]
  |        ^^^^^ Did you mean `set[str]`?
  |
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions

```
